fix styling on font-family,font-size,font-color and overall alignment

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  background-color: #eae3e3;
+  background-color: #fafafa;
   font-family: "Quicksand", sans-serif;
 }
 
@@ -34,10 +34,9 @@ a {
   display: flex;
   justify-content: flex-start;
   background-color: white;
-  padding: 1rem 2rem;
-  border-bottom: 1px solid #ccc;
-  gap: 2rem;
-  padding-left: 7.5%;
+  padding: 1rem 5%;
+  border-bottom: 1px solid #e8e8e8;
+  gap: 5%;
   align-items: center;
   width: 100%;
   margin: 0 auto;
@@ -52,6 +51,7 @@ a {
   font-style: normal;
   line-height: normal;
   letter-spacing: normal;
+  margin-left: 1.2%;
 }
 
 .nav-container {
@@ -66,7 +66,6 @@ a {
 }
 
 .nav-container li:hover {
-  text-decoration: underline;
   font-weight: bolder;
 }
 
@@ -80,7 +79,6 @@ a {
 }
 
 .link-active {
-  text-decoration: underline;
   color: black;
   font-weight: 800;
 }
@@ -90,7 +88,6 @@ a {
   display: inline-flex;
   align-items: center;
   margin-left: auto;
-  margin-right: 4rem;
 }
 
 .fa-icon {
@@ -102,9 +99,21 @@ a {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  width: 85%;
+  width: 100%;
   font-size: larger;
-  padding: 0;
+  padding: 0 6%;
+}
+
+.catagory {
+  margin: 0 0 1% 0;
+  opacity: 0.5;
+  font-family: "Montserrat", sans-serif;
+  font-size: 0.875rem;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
 }
 
 .book {
@@ -114,7 +123,7 @@ a {
   gap: 2%;
   margin-bottom: 2%;
   padding: 2% 4%;
-  border: 1px solid #ccc;
+  border: 1px solid #e8e8e8;
   border-radius: 4px;
 }
 
@@ -141,8 +150,7 @@ a {
   width: 0.055rem;
   height: 4.375rem;
   margin: 1.125rem 3.688rem 0 4.938rem;
-  border: solid 1px #b9b7b728;
-  background-color: #e8e8e8;
+  border: 1px solid #e8e8e8;
 }
 
 .book_progress {
@@ -161,6 +169,7 @@ a {
   flex-direction: column;
   align-items: flex-start;
   gap: 1vh;
+  font-family: "Roboto Slab", sans-serif;
 }
 
 .update-progress {
@@ -205,7 +214,13 @@ a {
 
 .Percentage {
   color: #121212;
-  font-size: 2.2rem;
+  font-family: "Montserrat", sans-serif;
+  font-size: 2rem;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  font-weight: lighter;
 }
 
 .text-completed {
@@ -220,7 +235,7 @@ a {
 .remove,
 .edit,
 .author {
-  margin: 0.188rem 5% 0 0;
+  margin: 0.188rem 2% 0 0%;
   font-size: 0.875rem;
   font-weight: 300;
   font-family: "Roboto Slab", serif;
@@ -237,7 +252,7 @@ a {
   display: flex;
   align-items: center;
   margin-top: 1rem;
-  gap: 2%;
+  gap: 4%;
 }
 
 .book-buttons {
@@ -256,14 +271,14 @@ a {
 }
 
 hr {
-  margin: 0 7.5%;
-  color: #e8e8e8;
+  margin: 0 6%;
+  border: solid 1px #e8e8e8;
 }
 
 .form-container {
   display: flex;
   flex-direction: column;
-  width: 85%;
+  width: 88%;
   margin: 0 auto;
   gap: 1.5vh;
   align-items: flex-start;
@@ -272,6 +287,7 @@ hr {
 .form-title {
   font-size: 1.25rem;
   font-weight: bold;
+  font-family: "Montserrat", sans-serif;
   letter-spacing: -0.18px;
   color: #888;
 }
@@ -281,16 +297,23 @@ form {
   gap: 4%;
   width: 100%;
   margin: 0 auto;
+  justify-content: space-between;
+}
+
+::placeholder {
+  color: #c4c4c4;
+  font-weight: lighter;
 }
 
 .add-book-title {
   border-radius: 4px;
-  font-family: Montserrat, sans-serif;
+  font-family: "Montserrat", sans-serif;
   border: solid 1px #e8e8e8;
   padding: 0.8rem 1rem;
-  width: 60vh;
+  width: 55%;
   background-color: #fff;
   font-size: 1rem;
+  color: #c4c4c4;
 }
 
 .add-book-author {
@@ -299,10 +322,10 @@ form {
   border-radius: 4px;
   border: solid 1px #e8e8e8;
   background-color: #fff;
-  font-family: Montserrat, sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 1rem;
-  font-weight: normal;
   letter-spacing: -0.15px;
+  color: #c4c4c4;
 }
 
 .add-btn {
@@ -314,7 +337,7 @@ form {
   border: none;
   font-family: "Roboto Slab", sans-serif;
   font-size: 0.813rem;
-  font-weight: bold;
+  font-weight: normal;
   letter-spacing: 0.5px;
   text-align: center;
   color: #fff;
@@ -325,4 +348,25 @@ form {
   color: #0290ff;
   background-color: white;
   border: 2px solid #0290ff;
+}
+
+.catagory-status {
+  width: 30%;
+  margin: 0 auto;
+  font-size: 1.2rem;
+  font-family: "Roboto Slab", serif;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: 0.5px;
+  text-align: center;
+  padding: 0.438rem 1.188rem 0.5rem 1.375rem;
+  border-radius: 3px;
+  background-color: #0290ff;
+  outline: none;
+  border: none;
+  text-transform: uppercase;
+  cursor: pointer;
+  color: #fff;
 }
